<resources>
    <string name="app_name">Bank Sampah Sahitya</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="label_savings">Tabungan</string>
    <string name="label_garbage_info">Info Sampah</string>
    <string name="label_ranking">Peringkat</string>
    <string name="label_report">Laporan</string>
    <string name="label_setting">Pengaturan</string>
    <string name="label_greeting">Halo,</string>
    <string name="value_name">Nasabah!</string>
    <string name="label_savings_greeting">Ayo kumpulkan sampahmu dan tukar dengan sejumlah uang hanya di Bank Sampah Sahitya!</string>
    <string name="label_amount">Total Uang</string>
    <string name="label_currency">Rp.</string>
    <string name="value_amount">75.000</string>
    <string name="label_details"><u>Details</u></string>
    <string name="unit_weight">Kg</string>
    <string name="value_weight">21</string>
    <string name="label_weight">Berat Sampah</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="laporan_tabungan">Laporan Tabungan</string>
    <string name="label_week">MINGGU 1</string>
    <string name="label_weight_small">Berat : 0 Kg</string>
    <string name="label_value_weight">16</string>
    <string name="total">Total</string>
    <string name="weight">Berat : 16 Kg</string>
    <string name="label_name">Ikhsan Permana</string>
    <string name="label_email">ikhsanpermana@gmail.com</string>
    <string name="label_logo_sahitya">Bank Sampah Sahitya</string>
    <string name="label_logout">Logout</string>
    <string name="label_submenu_profile">Pencairan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sukses_password">Password berhasil diubah</string>
    <string name="masuk">Masuk</string>
    <string name="belum_memiliki_akun">Belum Memiliki Akun?</string>
    <string name="sign_up"><u>Daftar</u></string>
    <string name="forgot_password"><u>Lupa Kata Sandi?</u></string>
    <string name="label_instructions">Masukkan alamat email yang anda gunakan ketika anda bergabung dan kami akan mengirimkan anda instruksi untuk mereset kata sandi anda</string>
    <string name="email_address">Email Address</string>
    <string name="send_email">Send Email</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="fakultas">Fakultas</string>
    <string name="jurusan">Jurusan</string>
    <string name="no_hp">No. HP</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_lahir">Tanggal Lahir (YYYY-MM-DD)</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="bank_sampah_sahitya">Bank Sampah Sahitya</string>
    <string name="daftar">Daftar</string>
    <string name="label_ranking_mingguan">Ranking Mingguan</string>
    <string name="label_per_minggu">Periode ke-1</string>
    <string name="random_winner">Random Winner</string>
    <string name="nama_random_winner">Nama</string>
    <string name="null_value">0</string>
    <string name="regist">Daftar</string>
    <string name="regist_success">Akun telah berhasil terdaftar</string>
    <string name="kode_verifikasi">Kode Verifikasi</string>
    <string name="label_kode_verifikasi">Masukkan kode verifikasi yang sudah dikirim ke email anda</string>
    <string name="kirim">Kirim</string>
    <string name="lupa_sandi">Lupa Kata Sandi?</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="label_connection_lost">Ups! Koneksi kamu terputus. Pastikan kamu tersambung ke internet ya…</string>
    <string name="koneksi_dialog">Pastikan kamu tersambung ke internet ya…</string>
    <string name="refresh">Refresh</string>
    <string name="tanggal">Tidak Ada</string>
    <string name="zero">0</string>
    <string name="nomor">No.</string>
    <string name="jenis">Jenis</string>
    <string name="harga_kg">Harga / Kg</string>
    <string name="password_baru">Password Baru</string>
    <string name="simpan">Simpan</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="pendapatan_saat_ini">Pendapatan Saat Ini</string>
    <string name="rp_0">Rp. 0</string>
    <string name="riwayat_pencairan">Riwayat Pencairan</string>
    <string name="_00_00_01_jan_2020">00:00 – 01 Jan 2020</string>
    <string name="pencairan_kosong">Anda belum pernah melakukan pencairan</string>
    <string name="app_info">App Info</string>
    <string name="f_a_q">F.A.Q</string>
    <string name="kontak_kami">Kontak Kami</string>
    <string name="bantuan">Bantuan</string>
    <string name="versi_01_00">Versi 01.00</string>
    <string name="label_copyright">Copyright 2019 \nFakultas Sains Dan Teknologi\n UIN Syarif Hidayatullah Jakarta</string>
    <string name="belum_pernah_melakukan_transaksi">Belum pernah melakukan transaksi</string>
    <string name="bulan_namabulan_tahun">Bulan Namabulan Tahun</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ubah_foto_profile">Ubah Foto Profile</string>
    <string name="ranking_belum_tersedia">Ranking Belum Tersedia!</string>
    <string name="label_ajakan_ranking">Maaf saat ini ranking belum tersedia , Ayo tingkatkan terus tabungan kamu!</string>
    <string name="nama_sampah">Nama Sampah</string>
    <string name="coba_lagi_ya">Coba lagi, ya!</string>
    <string name="email_atau_password_yang_kamu_masukkan_belum_tepat">Email atau password yang kamu masukkan belum tepat</string>
    <string name="oke"><u>Oke</u></string>
    <string name="apakah_kamu_yakin_ingin_keluar">Apakah kamu yakin ingin keluar?</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="data_berhasil_diubah">Data berhasil diubah!</string>
    <string name="klik_tombol_oke_untuk_melanjutkan">Klik tombol Oke untuk melanjutkan</string>
    <string name="label_edit_profile_dialog">Apakah data yang diubah sudah benar?</string>
    <string name="label_home">Home</string>
    <string name="info">Info</string>
    <string name="cari_nama_barang">Cari nama barang</string>
    <string name="kategori">Kategori</string>
    <string name="pengaturan">Pengaturan</string>

    <string-array name="fakultas">
        <item>Ilmu Tarbiyah dan Keguruan</item>
        <item>Adab dan Humaniora</item>
        <item>Ushuluddin</item>
        <item>Syariah dan Hukum</item>
        <item>Dakwah dan Ilmu Komunikasi</item>
        <item>Dirasat Islamiyah</item>
        <item>Psikologi</item>
        <item>Ekonomi dan Bisnis</item>
        <item>Sains dan Teknologi</item>
        <item>Ilmu Kesehatan</item>
        <item>Ilmu Sosial dan Ilmu Politik</item>
        <item>Kedokteran</item>
    </string-array>

    <string-array name="jurusan_fitk">
        <item>Pendidikan Agama Islam</item>
        <item>Pendidikan Bahasa Arab</item>
        <item>Pendidikan Bahasa Inggris</item>
        <item>Pendidikan Biologi</item>
        <item>Pendidikan Kimia</item>
        <item>Pendidikan Fisika</item>
        <item>Pendidikan Matematika</item>
        <item>Manajemen Pendidikan</item>
        <item>Pend. Guru Madrasah Ibtidaiyah</item>
        <item>Pend. Bahasa dan Sastra Indonesia</item>
        <item>Pend. Ilmu Pengetahuan Sosial</item>
        <item>Pend. Islam Anak Usia Dini</item>
    </string-array>

    <string-array name="jurusan_adab_humaniora">
        <item>Bahasa dan Sastra Arab</item>
        <item>Sejarah dan Kebudayaan Islam</item>
        <item>Tarjamah</item>
        <item>Ilmu Perpustakaan</item>
        <item>Bahasa dan Sastra Inggris</item>
    </string-array>

    <string-array name="jurusan_ushuluddin">
        <item>Studi Agama Agama</item>
        <item>Ilmu Alquran dan Tafsir</item>
        <item>Ilmu Hadist</item>
        <item>Aqidah dan Filsafat Islam</item>
        <item>Ilmu Tasawuf</item>
    </string-array>

    <string-array name="jurusan_syariah_hukum">
        <item>Hukum Keluarga (Ahwal Syakhsiyyah)</item>
        <item>Perbandingan Mazhab</item>
        <item>Hukum Tata Negara (Siyasah)</item>
        <item>Hukum Pidana Islam (Jinayah)</item>
        <item>Hukum Ekonomi Syariah (Muamalat)</item>
        <item>Ilmu Hukum</item>
    </string-array>

    <string-array name="jurusan_dakwah_komunikasi">
        <item>Komunikasi dan Penyiaran Islam</item>
        <item>Bimbingan dan Penyuluhan Islam</item>
        <item>Manajemen Dakwah</item>
        <item>Pengembangan Masyarakat Islam</item>
        <item>Kesejahteraan Sosial</item>
        <item>Jurnalistik</item>
    </string-array>

    <string-array name="jurusan_dirasat">
        <item>Dirasat Islamiyah</item>
    </string-array>

    <string-array name="jurusan_psikologi">
        <item>Psikologi</item>
    </string-array>

    <string-array name="jurusan_ekonomi">
        <item>Manajemen</item>
        <item>Akuntansi</item>
        <item>Ilmu Ekonomi dan Studi Pembangunan</item>
        <item>Ekonomi Syariah</item>
        <item>Perbankan Syariah</item>
    </string-array>

    <string-array name="jurusan_sains_teknologi">
        <item>Agribisnis</item>
        <item>Teknik Informatika</item>
        <item>Sistem Informasi</item>
        <item>Matematika</item>
        <item>Biologi</item>
        <item>Kimia</item>
        <item>Fisika</item>
        <item>Teknik Pertambangan</item>
    </string-array>

    <string-array name="jurusan_ilmu_kesehatan">
        <item>Kesehatan Masyarakat</item>
        <item>Farmasi</item>
        <item>Ilmu Keperawatan</item>
        <item>Program Profesi Keperawatan (Ners)</item>
        <item>Program Profesi Farmasi (Apoteker)</item>
    </string-array>

    <string-array name="jurusan_isip">
        <item>Sosiologi</item>
        <item>Ilmu Politik</item>
        <item>Ilmu Hubungan Internasional</item>
    </string-array>

    <string-array name="jurusan_kedokteran">
        <item>Kedokteran dan Pendidikan Dokter</item>
    </string-array>
</resources>