<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_icon_home"
        android:title="@string/label_home" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_icon_laporan"
        android:title="@string/label_report"/>

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_icon_ranking"
        android:title="@string/label_ranking"/>

    <item
        android:id="@+id/navigation_garbage_info"
        android:icon="@drawable/ic_icon_info"
        android:title="@string/label_garbage_info"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_icon_pengaturan"
        android:title="@string/label_setting"/>

</menu>