<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_created_at_riwayat_transaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/coolvetica_rg"
        android:textSize="@dimen/item_size_14"
        android:layout_marginRight="@dimen/item_margin_8"
        android:layout_marginEnd="@dimen/item_margin_8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_currency"
        android:fontFamily="@font/coolvetica_rg"
        android:textSize="@dimen/item_size_14"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="@dimen/item_margin_4"
        android:layout_marginStart="@dimen/item_margin_4" />

    <TextView
        android:id="@+id/tv_riwayat_transaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_margin_4"
        android:layout_marginStart="@dimen/item_margin_4"
        android:text="@string/zero"
        android:fontFamily="@font/coolvetica_rg"
        android:textSize="@dimen/item_size_14"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>