<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/item_margin_8"
    android:paddingLeft="@dimen/item_margin_16"
    android:paddingRight="@dimen/item_margin_16">

    <TextView
        android:id="@+id/tv_nama_sampah_detail_laporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin_4"
        android:text="@string/nama_sampah"
        android:textSize="@dimen/item_size_20"
        app:fontFamily="@font/coolvetica_rg"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_tanggal_detail_laporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nama_sampah_detail_laporan"
        android:layout_marginTop="@dimen/item_margin_4"
        android:layout_marginStart="@dimen/item_margin_4"
        android:layout_marginBottom="@dimen/item_margin_16"
        android:textSize="@dimen/item_size_12"
        android:text="@string/_00_00_01_jan_2020"
        app:fontFamily="@font/coolvetica_rg"
        android:textColor="@color/colorFont"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_margin_1"
        android:layout_marginLeft="@dimen/item_margin_4"
        android:layout_marginRight="@dimen/item_margin_4"
        android:layout_below="@id/tv_tanggal_detail_laporan"
        android:background="@color/colorBorder" />

    <TextView
        android:id="@+id/tv_uang_detail_laporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_margin_4"
        android:layout_alignParentEnd="true"
        android:text="@string/rp_0"
        android:textSize="@dimen/item_size_20"
        app:fontFamily="@font/coolvetica_rg"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_berat_detail_laporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_margin_4"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tv_uang_detail_laporan"
        android:text="@string/unit_weight"
        android:textSize="@dimen/item_size_16"
        app:fontFamily="@font/coolvetica_rg"
        android:textColor="@color/colorFont"/>

</RelativeLayout>