<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/item_margin_32"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/item_size_20"
            app:fontFamily="@font/coolvetica_rg"
            android:text="@string/label_ranking_mingguan" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/item_margin_52"
            android:background="@drawable/ic_ilus_ranking_alternative"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_32"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/ranking_belum_tersedia"
            app:fontFamily="@font/coolvetica_rg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_8"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/item_size_16"
            android:textAlignment="center"
            android:text="@string/label_ajakan_ranking"
            app:fontFamily="@font/coolvetica_rg"/>

        </LinearLayout>
</FrameLayout>