<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/item_margin_32"
    tools:context=".presentation.membership.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:padding="@dimen/item_margin_8"
            android:src="@drawable/ic_logo_bss"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_email_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="@dimen/item_margin_32"
            android:layout_marginBottom="@dimen/item_margin_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/item_margin_56"
                android:background="@drawable/bg_rounded_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/item_margin_14"
                android:textColor="@color/colorFont"
                android:textColorHint="@color/colorDimGray"
                android:textSize="@dimen/item_size_14"
                app:fontFamily="@font/coolvetica_rg"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_password_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/item_margin_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/item_margin_12"
                android:paddingBottom="@dimen/item_margin_12"
                android:paddingLeft="@dimen/item_margin_12"
                android:paddingRight="@dimen/item_margin_12"
                android:background="@drawable/bg_rounded_edit_text"
                android:textSize="@dimen/item_size_14"
                android:textColor="@color/colorFont"
                android:textColorHint="@color/colorDimGray"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:fontFamily="@font/coolvetica_rg"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_masuk_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_32"
            android:background="@drawable/bg_rounded_green_false"
            android:text="@string/masuk"
            android:textSize="@dimen/item_size_14"
            android:textStyle="bold"
            android:textColor="@color/colorItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            android:enabled="false"
            app:fontFamily="@font/coolvetica_rg"/>

        <TextView
            android:id="@+id/tv_forgot_password_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorDimGray"
            android:layout_marginTop="@dimen/item_margin_16"
            android:gravity="center"
            app:fontFamily="@font/coolvetica_rg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin_8"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_memiliki_akun"
                android:textColor="@color/colorDimGray"
                android:gravity="center"
                app:fontFamily="@font/coolvetica_rg"/>

            <TextView
                android:id="@+id/tv_sign_up_login_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin_2"
                android:layout_marginStart="@dimen/item_margin_2"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                app:fontFamily="@font/coolvetica_rg"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>