<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:id="@+id/layout_no_koneksi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/item_margin_32">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/no_internet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/connection_lost"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="@dimen/item_size_16"
            app:fontFamily="@font/coolvetica_rg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_connection_lost"
            android:layout_marginBottom="@dimen/_36sdp"
            android:maxLines="3"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/item_size_16"
            android:textColor="@color/colorFont"
            app:fontFamily="@font/coolvetica_rg"/>


        <TextView
            android:id="@+id/tv_refresh_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/refresh"
            android:textSize="@dimen/item_size_16"
            android:drawableStart="@drawable/ic_refresh"
            android:drawablePadding="@dimen/_8sdp"
            android:singleLine="true"
            app:fontFamily="@font/coolvetica_rg"/>
    </LinearLayout>

</FrameLayout>